# 2D-X-ray-to-3D-Bone-Reconstruction

./: .env.example  .gitignore  README.md  convert_npy_to_png.py  main.py  pyproject.toml  slurm_train.sh
backend/: main.py
data_factory/: VSDFullBodyDataset.json  build_dataset.py  download_cads.py  glb_to_xray.py  volume_loader.py
downloaded_samples/cads_08804_1.2.840.113654.2.55.52389951767396449775259957481175813845_a010/: ap.npy  lat.npy
downloaded_samples/cads_s0359_a-06/: ap.npy  lat.npy
downloaded_samples/cads_sub-verse650_dir-iso_ct_a013/: ap.npy  lat.npy
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  model-viewer.d.ts
model/: __init__.py  architecture.py  dataset.py  inference.py  losses.py  train.py
model/logs/: run_20260302_165055.json  run_20260303_021516.json
notebooks/: find_best_samples.ipynb
scripts/: fetch_test_xrays.py  sync_cluster.sh
